--- a/app/templates/docentes/estudiantes.html
+++ b/app/templates/docentes/estudiantes.html
@@ -25,6 +25,10 @@
     <i class="fas fa-chart-bar"></i>
     <span>Calificaciones</span>
 </a>
+<a href="{{ url_for('docentes.notas') }}" class="sidebar-link active">
+    <i class="fas fa-clipboard-list"></i>
+    <span>Notas</span>
+</a>
 {% endblock %}
 
 {% block content %}
