--- a/app/templates/docentes/index.html
+++ b/app/templates/docentes/index.html
@@ -1,6 +1,3 @@
-<<<<<<< HEAD
-{% extends "base.html" %}
-=======
 {% extends "docentes/base.html" %}
 
 {% block title %}Panel de Docente - Sistema Colegio{% endblock %}
@@ -28,8 +25,11 @@
     <i class="fas fa-chart-bar"></i>
     <span>Calificaciones</span>
 </a>
+<a href="{{ url_for('docentes.notas') }}" class="sidebar-link">
+    <i class="fas fa-clipboard-list"></i>
+    <span>Notas</span>
+</a>
 {% endblock %}
->>>>>>> cf6d9494fb370b90ae4ff850055e87bfa28de818
 
 {% block content %}
 <div class="container mt-5">
@@ -76,10 +76,28 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+                        <div class="col-md-4 mt-4">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <h5 class="card-title">Notas</h5>
+                                    <p class="card-text">Ver y editar calificaciones</p>
+                                    <a href="{{ url_for('docentes.notas') }}" class="btn btn-primary">Ver Notas</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 mt-4">
+                            <div class="card text-center">
+                                <div class="card-body">
+                                    <h5 class="card-title">Calificaciones</h5>
+                                    <p class="card-text">Ver resumen de evaluaciones</p>
+                                    <a href="{{ url_for('docentes.calificaciones') }}" class="btn btn-primary">Ver Calificaciones</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div> <!-- /.row -->
+                </div> <!-- /.card-body -->
+            </div> <!-- /.card -->
+        </div> <!-- /.col-md-9 -->
+    </div> <!-- /.row -->
+</div> <!-- /.container -->
 {% endblock %}
