vistas de juegos

--- a/app/templates/estudiantes/index.html
+++ b/app/templates/estudiantes/index.html
@@ -32,6 +32,15 @@
         </div>
       </div>
     </div>
+    <div class="col-md-4">
+      <div class="card text-white bg-warning mb-3">
+        <div class="card-body">
+          <h5 class="card-title">Juegos</h5>
+          <p class="card-text">Accede a los juegos educativos.</p>
+          <a href="{{ url_for('estudiantes.vista_juegos') }}" class="btn btn-light">Ir a Juegos</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
