--- a/app/templates/estudiantes/index.html
+++ b/app/templates/estudiantes/index.html
@@ -25,10 +25,11 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card text-white bg-info mb-3">
+      <div class="card text-white bg-warning mb-3">
         <div class="card-body">
-          <h5 class="card-title">Horario</h5>
-          <p class="card-text">Accede a tu horario semanal de clases.</p>
+          <h5 class="card-title">Juegos Educativos</h5>
+          <p class="card-text">Accede a los juegos educativos interactivos.</p>
+          <a href="{{ url_for('estudiantes.vista_juegos') }}" class="btn btn-light">Ir a Juegos</a>
         </div>
       </div>
     </div>
