--- a/app/templates/docentes/editar_nota.html
+++ b/app/templates/docentes/editar_nota.html
@@ -31,7 +31,7 @@
 </a>
 {% endblock %}
 
-{% block content %}
+{% block admin_content %}
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-8">
