--- a/app/templates/docentes/estudiantes.html
+++ b/app/templates/docentes/estudiantes.html
@@ -31,7 +31,7 @@
 </a>
 {% endblock %}
 
-{% block content %}
+{% block admin_content %}
 <div class="container mt-5">
     <div class="card">
         <div class="card-header">
