--- a/app/templates/docentes/notas.html
+++ b/app/templates/docentes/notas.html
@@ -31,7 +31,7 @@
 </a>
 {% endblock %}
 
-{% block content %}
+{% block admin_content %}
 <div class="container mt-4">
   <div class="d-flex justify-content-between align-items-center mb-3">
     <h2 class="mb-0">Notas Asignadas</h2>
