pruebas unitarias  2 3 y 4 arreglo de ver detalles del estudiante

--- a/app/templates/docentes/ver_estudiante.html
+++ b/app/templates/docentes/ver_estudiante.html
@@ -27,7 +27,7 @@
 </a>
 {% endblock %}
 
-{% block content %}
+{% block admin_content %}
 <div class="row">
     <div class="col-12">
         <div class="card">
